// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`banner:object 1`] = `
Array [
  Array [
    "dist/default.cjs.js",
    "/*!
 * name v1.2.3
 * (c) 2018-present author
 * Released under the GPL License.
 */
'use strict';

var _default = {};

module.exports = _default;
",
  ],
]
`;

exports[`banner:string 1`] = `
Array [
  Array [
    "dist/default.cjs.js",
    "woot
'use strict';

var _default = {};

module.exports = _default;
",
  ],
]
`;

exports[`banner:true 1`] = `
Array [
  Array [
    "test/fixtures/banner/dist/index.cjs.js",
    "/*!
 * foo v0.0.0
 * (c) 2015-present name <email@email.com>
 * Released under the MIT License.
 */
'use strict';

var index = 42;

module.exports = index;
",
  ],
]
`;

exports[`buble:async 1`] = `
Array [
  Array [
    "dist/async.cjs.js",
    "'use strict';

var this$1 = undefined;
var a = function () { return new Promise(function ($return, $error) {
  return $return({ a: 'a' });
}.bind(this$1)); };

var async = a().then(function (res) { return Object.assign({}, res); });

module.exports = async;
",
  ],
]
`;

exports[`buble:async-and-object-rest-spread 1`] = `
Array [
  Array [
    "dist/async-dot-dot-dot.cjs.js",
    "'use strict';

var asyncDotDotDot = (function () {
  return new Promise(function ($return, $error) {
    return this.bar().then(function ($await_1) {
      try {
        return $return(Object.assign({}, $await_1));
      } catch ($boundEx) {
        return $error($boundEx);
      }
    }.bind(this), $error);
  }.bind(this));
});

module.exports = asyncDotDotDot;
",
  ],
]
`;

exports[`buble:react-jsx 1`] = `
Array [
  Array [
    "dist/react-jsx.cjs.js",
    "'use strict';

var reactJsx = React.createElement(
  \\"div\\",
  { a: 1 },
  \\"hi\\"
);

module.exports = reactJsx;
",
  ],
]
`;

exports[`buble:vue-jsx 1`] = `
Array [
  Array [
    "dist/vue-jsx.cjs.js",
    "'use strict';

var vueJsx = {
  render: function render() {
    var h = arguments[0];

    return h(
      \\"div\\",
      {
        attrs: { a: 1 }
      },
      [\\"hi\\"]
    );
  }
};

module.exports = vueJsx;
",
  ],
]
`;

exports[`defaults 1`] = `
Array [
  Array [
    "dist/index.cjs.js",
    "'use strict';

var index = 42;

module.exports = index;
",
  ],
]
`;

exports[`exclude file 1`] = `
Array [
  Array [
    "dist/index.cjs.js",
    "'use strict';

function _interopDefault (ex) { return (ex && (typeof ex === 'object') && 'default' in ex) ? ex['default'] : ex; }

var foo = _interopDefault(require('./foo.js'));



module.exports = foo;
",
  ],
]
`;

exports[`extendOptions 1`] = `
Array [
  Array [
    "dist/foo.cjs.js",
    "'use strict';

var foo = 'foo';

module.exports = foo;
",
  ],
  Array [
    "dist/bar.cjs.js",
    "'use strict';

var bar = 'bar';

module.exports = bar;
",
  ],
  Array [
    "dist/foo.js",
    "(function (global, factory) {
	typeof exports === 'object' && typeof module !== 'undefined' ? module.exports = factory() :
	typeof define === 'function' && define.amd ? define(factory) :
	(global.umd = factory());
}(this, (function () { 'use strict';

var foo = 'foo';

return foo;

})));
",
  ],
  Array [
    "dist/bar.js",
    "(function (global, factory) {
	typeof exports === 'object' && typeof module !== 'undefined' ? module.exports = factory() :
	typeof define === 'function' && define.amd ? define(factory) :
	(global.umd = factory());
}(this, (function () { 'use strict';

var bar = 'bar';

return bar;

})));
",
  ],
  Array [
    "dist/foo.min.js",
    "!function(e,n){\\"object\\"==typeof exports&&\\"undefined\\"!=typeof module?module.exports=n():\\"function\\"==typeof define&&define.amd?define(n):e.min=n()}(this,function(){\\"use strict\\";return\\"foo\\"});
",
  ],
  Array [
    "dist/bar.min.js",
    "!function(e,n){\\"object\\"==typeof exports&&\\"undefined\\"!=typeof module?module.exports=n():\\"function\\"==typeof define&&define.amd?define(n):e.min=n()}(this,function(){\\"use strict\\";return\\"bar\\"});
",
  ],
]
`;

exports[`inline:true 1`] = `
Array [
  Array [
    "dist/index.cjs.js",
    "'use strict';

function createCommonjsModule(fn, module) {
	return module = { exports: {} }, fn(module, module.exports), module.exports;
}

var pMap = createCommonjsModule(function (module) {
module.exports = (iterable, mapper, opts) => new Promise((resolve, reject) => {
	opts = Object.assign({
		concurrency: Infinity
	}, opts);

	if (typeof mapper !== 'function') {
		throw new TypeError('Mapper function is required');
	}

	const concurrency = opts.concurrency;

	if (!(typeof concurrency === 'number' && concurrency >= 1)) {
		throw new TypeError(\`Expected \\\\\`concurrency\\\\\` to be a number from 1 and up, got \\\\\`\${concurrency}\\\\\` (\${typeof concurrency})\`);
	}

	const ret = [];
	const iterator = iterable[Symbol.iterator]();
	let isRejected = false;
	let iterableDone = false;
	let resolvingCount = 0;
	let currentIdx = 0;

	const next = () => {
		if (isRejected) {
			return;
		}

		const nextItem = iterator.next();
		const i = currentIdx;
		currentIdx++;

		if (nextItem.done) {
			iterableDone = true;

			if (resolvingCount === 0) {
				resolve(ret);
			}

			return;
		}

		resolvingCount++;

		Promise.resolve(nextItem.value)
			.then(el => mapper(el, i))
			.then(
				val => {
					ret[i] = val;
					resolvingCount--;
					next();
				},
				err => {
					isRejected = true;
					reject(err);
				}
			);
	};

	for (let i = 0; i < concurrency; i++) {
		next();

		if (iterableDone) {
			break;
		}
	}
});
});

var pAll = (iterable, opts) => pMap(iterable, el => el(), opts);

var index = { all: pAll, map: pMap };

module.exports = index;
",
  ],
]
`;

exports[`no-js-transform 1`] = `
Array [
  Array [
    "dist/index.cjs.js",
    "'use strict';

var index = () => {}

module.exports = index;
",
  ],
]
`;
